# CFDCourse24

./: CMakeLists.txt
doc/: grades_1q.ods  parallel_examples.cpp
doc/lectures/: clisting.tex  eq-basis.tex  latex_defs.tex  lect03.tex  lect08.tex  lect13a.tex  lect13b.tex  lect14.tex  lect15.tex  lect16.tex  lect17.tex  lect19.tex  lect20.tex  lect21.tex  lect22.tex  lect23.tex  lect24.tex  lect25.tex  lectures.tex
src/: CMakeLists.txt
src/cfd24/: CMakeLists.txt
src/cfd24/debug/: saver.cpp  saver.hpp
src/cfd24/fvm/: fvm_assembler.cpp  fvm_assembler.hpp
src/cfd24/geom/: point.hpp
src/cfd24/grid/: grid_partition.cpp  grid_partition.hpp  i_grid.cpp  i_grid.hpp
src/cfd24/mat/: csrmat.cpp
src/mpi_test/: CMakeLists.txt  ddm_poisson_test.cpp  mpi_test.cpp  mpi_test.hpp
src/test/: CMakeLists.txt  cavern_2d_fem_cbs_test.cpp  cavern_2d_fvm_simple_test.cpp  cavity_fvm_rans_test.cpp  convection_fvm_les_test.cpp  cylinder_fvm_simple_test.cpp  fvm_gradient_test.cpp  grid_test.cpp  poisson_fvm_solve_test.cpp  transport_fvm_solve_test.cpp
